--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,9 @@
     margin-top: -15%;;
     width:100%
   }
+
+  .History{
+    font-size:1.5rem;
+    margin-left: 15%;
+    margin-bottom: 10%;
+  }
